# RealTimeParticles

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_Installer.txt  conanfile.py  run.sh  runApp.sh  runBuild.sh
app/: BoidsApp.hpp  CMakeLists.txt  Parameters.hpp  ParticleSystemApp.cpp  ParticleSystemApp.hpp  boidsApp.cpp
app/imgui_backend/: CMakeLists.txt  imgui_impl_sdl.cpp
cmake/: Conan.cmake
core/: Boids.cpp  Boids.hpp  BoidsGenerator.cpp  BoidsGenerator.hpp  CMakeLists.txt  Steer.cpp  Steer.hpp
physics/: Boids.cpp  Boids.hpp  CMakeLists.txt  Clouds.cpp  Clouds.hpp  Fluids.cpp  Fluids.hpp  Model.cpp  Model.hpp  Physics.cpp  Physics.hpp  RadixSortCommon.hpp  tpRadixSort.hpp
physics/ocl/: Boids.cpp  Boids.hpp  CMakeLists.txt  Clouds.cpp  Clouds.hpp  Context.cpp  Context.hpp  ErrorCode.cpp  ErrorCode.hpp  Fluids.cpp  Fluids.hpp  OCLBoids.cpp  OCLBoids.hpp  OclModel.hpp  opencl.hpp
physics/ocl/kernels/: boids.cl  clouds.cl  define.cl  fluids.cl  grid.cl  matvec.cl  radixSort.cl  sph.cl  utils.cl
physics/utils/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.hpp  PerlinParticle.cpp  PerlinParticle.hpp  RadixSort.cpp  RadixSort.hpp  Target.cpp  Target.hpp
render/: CMakeLists.txt  Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  GLSL.hpp  OGLRender.cpp  OGLRender.hpp  OGLShader.cpp  OGLShader.hpp  Shader.cpp  Shader.hpp  ShaderCompiler.hpp
scripts/: build.sh  env.sh  pack.sh  run.sh
third_parties/: CMakeLists.txt
third_parties/SDL2/: CMakeLists.txt
third_parties/diligentGraphics/: Math.hpp
third_parties/glad/: CMakeLists.txt  glad.c
third_parties/glad/include/glad/: glad.h
third_parties/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp
ui/: BoidsWidget.cpp  BoidsWidget.hpp  CMakeLists.txt  FluidsWidget.cpp  FluidsWidget.hpp  GraphicsWidget.cpp  GraphicsWidget.hpp  PhysicsWidget.cpp  PhysicsWidget.hpp
utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.hpp  Geometry.cpp  Geometry.hpp  Logging.hpp  Math.hpp  Parameters.hpp  Utils.cpp  Utils.hpp
